# culinary_bot

./: README.md  pyproject.toml
.github/workflows/: ci.yml
app/: main.py
app/api/v1/routers/: __init__.py  chat.py  pantry.py  planner.py  recipes.py
app/api/v1/schemas/: __init__.py  ingredient_schema.py  meal_plan_schema.py  pantry_item_schema.py  recipe_schema.py  user_schema.py
app/core/: config.py
app/db/: session.py
app/models/: __init__.py  ingredient.py  meal_plan.py  pantry_item.py  recipe.py  user.py
app/nlp/: __init__.py  intent_classifier.py  llm.py
app/services/: __init__.py  ingredient_service.py  planner_service.py  recipe_service.py
chef_ai/: app.py  main.py
chef_ai/app/domain/: models.py  services.py
chef_ai/app/infrastructure/: db.py  repositories.py
chef_ai/app/interface/api/: routes.py
chef_ai/app/interface/cli/: commands.py
tests/: test_plan.py  test_recipe.py
