[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "chef_ai"
version = "0.1.0"
description = "ChefAI - recipe recommender and weekly-meal planner"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.100",
    "uvicorn>=0.22",
    "typer>=0.9",
    "pydantic>=2.0",
    "SQLAlchemy>=2.0",
    "tabulate>=0.9",
]

[project.optional-dependencies]
dev = ["ruff>=0.0.272", "pytest>=7.0"]

[tool.ruff]
select = ["E", "F"]
line-length = 88

[tool.pytest.ini_options]
addopts = "-q"
